Add update Site

--- a/imports/ui/site/site.html
+++ b/imports/ui/site/site.html
@@ -6,10 +6,12 @@
                 <h5 class="card-title">{{titreLieu}}</h5>
                 <p class="card-text">{{descriptifLieu}}</p>
                 <!-- Button trigger modal -->
-                <!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                    Mise à jour
-                </button>-->
+                <!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"> Mise à jour </button>-->
                 <button class="delete">&times;</button>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn-edit-site btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-id="{{_id}}">
+                    Modifier
+                </button>
             </div>
         </div>
     </div>
